--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Character movement sciprt.",
   "unity": "2021.3",
     "dependencies": {
-        "com.qhenshaw.charactermovement": "3.3.2",
+       // "com.qhenshaw.charactermovement": "3.3.2",
         "com.unity.mathematics": "1.3.0"
     }
   
