--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "displayName": "Yuchen CharacterMovement",
-  "author": "Yuchen Zhao",
-  "version": "1.0.0",
-  "name": "com.yuchen.charactermovement",
-  "description": "Character movement sciprt.",
-  "unity": "2021.3",
-    "dependencies": {
-        "com.unity.mathematics": "1.3.0"
-    }
-  
+	"name": "com.pspdoudou.yuchenpackage",
+	"displayName":"YuchenPackage",
+	"version": "0.1.0",
+	"unity": "6000.3",
+	"unityRelease": "6f1",
+	"description": "Replace this with your own description of the package. \n\nFor best results, use this text to summarize: \n\u25AA What the package does \n\u25AA How it can benefit the user \n\nNote: Special formatting characters are supported, including line breaks ('\\n') and bullets ('\\u25AA').",
+	"dependencies": {
+		"com.unity.test-framework": "1.6.0"
+	},
+	"author": {
+		"name": "yuchen zhao",
+		"url": "http://www.example.com",
+		"email": "example@email.com"
+	},
+	"changelogUrl": "https://example.com/changelog.html",
+	"documentationUrl": "https://example.com/",
+	"licensesUrl": "https://example.com/licensing.html"
 }
