--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 		"com.unity.test-framework": "1.6.0",
 		"com.unity.cinemachine": "3.1.0",
 		"com.unity.inputsystem": "1.4.4",
-		"com.qhenshaw.charactermovement": "https://github.com/qhenshaw/CharacterMovement.git",
-		"com.qhenshaw.gameevents": "https://github.com/qhenshaw/GameEvents.git"
+		"com.qhenshaw.charactermovement": "https://github.com/qhenshaw/CharacterMovement.git"
 
 	},
 	"author": {
