--- a/package.json
+++ b/package.json
@@ -1,33 +1,28 @@
 {
-	"name": "com.pspdoudou.yuchenpackage",
-	"displayName": "YuchenPackage",
-	"version": "0.1.0",
-	"unity": "2021.3",
-	"description": "Yuchen Zhao Player Package",
-	"dependencies": {
-		"com.unity.test-framework": "1.6.0",
-		"com.unity.cinemachine": "3.1.0",
-		"com.unity.inputsystem": "1.4.4",
-		"com.qhenshaw.charactermovement": "https://github.com/qhenshaw/CharacterMovement.git"
-
-	},
-	"author": {
-		"name": "yuchen zhao",
-		"url": "http://www.example.com",
-		"email": "example@email.com"
-	},
-	"changelogUrl": "https://example.com/changelog.html",
-	"documentationUrl": "https://example.com/",
-	"licensesUrl": "https://example.com/licensing.html",
-
-	"samples": [
-		{
-			"displayName": "Movement",
-			"description": "Player Base Movement with dash/crouch/slide/double jump",
-			"path": "Samples~"
-		}
-	]
-	
+  "name": "com.pspdoudou.yuchenpackage",
+  "displayName": "YuchenPackage",
+  "version": "0.1.1",
+  "unity": "2021.3",
+  "description": "Yuchen Zhao Player Package",
+  "dependencies": {
+    "com.unity.test-framework": "1.6.0",
+    "com.unity.cinemachine": "3.1.0",
+    "com.unity.inputsystem": "1.4.4",
+    "com.qhenshaw.charactermovement": "3.3.2"
+  },
+  "author": {
+    "name": "yuchen zhao",
+    "url": "http://www.example.com",
+    "email": "example@email.com"
+  },
+  "changelogUrl": "https://example.com/changelog.html",
+  "documentationUrl": "https://example.com/",
+  "licensesUrl": "https://example.com/licensing.html",
+  "samples": [
+    {
+      "displayName": "Movement",
+      "description": "Player Base Movement with dash/crouch/slide/double jump",
+      "path": "Samples~"
+    }
+  ]
 }
-
-
